# suitesparse-benchmarks

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/cholmod/: CMakeLists.txt  bench_cholmod.cpp
benchmarks/graphblas/: CMakeLists.txt  bench_graphblas.cpp
benchmarks/klu/: CMakeLists.txt  bench_klu.cpp
benchmarks/umfpack/: CMakeLists.txt  bench_umfpack.cpp
scripts/: run_aarch64.sh  run_all.sh  run_riscv64.sh  run_x86_64.sh
